# SilkSpool

./: .gitignore  BUILD_AND_RELEASE_DOCUMENTATION.md  BUILD_INSTRUCTIONS.md  BUILT_IN_MODS.md  MACOS_GATEKEEPER_GUIDE.md  Makefile  README.md  RELEASE_GUIDE.md  SILK_SPOOL_DEVELOPMENT_PLAN.md  build-release.sh  test-repo.html
.github/workflows/: build-release.yml  create-release.yml
releases/v0.1.0/: RELEASE_NOTES.md  SilkSpool-0.1.0-macOS-ARM64.dmg.sha256
silk-spool/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
silk-spool/public/: mods.json
silk-spool/src/: App.css  App.tsx
silk-spool/src-tauri/: Cargo.toml  clippy.toml  rustfmt.toml  tauri.conf.json
silk-spool/src-tauri/icons/: icon.icns
silk-spool/src-tauri/src/: config.rs  detect.rs  installed_mods.rs  installer.rs  lib.rs  main.rs  repository.rs  steam.rs  test_repo.rs  types.rs
silk-spool/src-tauri/src/tests/: basic_tests.rs  bepinex_tests.rs  config_tests.rs  game_detection_tests.rs  mod.rs  repository_tests.rs  steam_tests.rs
silk-spool/src/components/: AddRepoDialog.tsx  AdvancedFilters.tsx  ImageGallery.tsx  LazyImage.tsx  ModDetail.tsx  ModItem.tsx  ModList.tsx  NotificationContainer.tsx  RepoSelector.tsx  SearchBar.tsx  StatusBar.tsx  index.ts
silk-spool/src/hooks/: useInstalledMods.ts
silk-spool/src/services/: imageCacheService.ts  installedModsService.ts  installerService.ts  notificationService.ts  repositoryService.ts  searchService.ts
silk-spool/src/test/: setup.ts
(+4 files in other folders)
