[package]
name = "silk-spool"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "silk_spool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vdf = "0.1"
walkdir = "2"
regex = "1"
dirs = "5"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.0"

# Development tools
[package.metadata.scripts]
fmt = "cargo fmt --all"
clippy = "cargo clippy --all-targets --all-features -- -D warnings"
check = "cargo check --all-targets --all-features"
test = "cargo test --all-targets --all-features"

